--- a/public/clan.html
+++ b/public/clan.html
@@ -5,8 +5,92 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Clan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!--google fonts-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
+    <!--custom css-->
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <p>This is the clan page. Yay, you found me</p>    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+                <img src="./media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top">
+                    The Normies
+            </a>                
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/clan">Our Clan</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about">About</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <img class="img-fluid" src="./media/header/banner.jpg" style="width:100%; height: auto;">
+    </header>
+    <div class="container-fluid">
+        <h3>Compare Members</h3>
+        <div class="form-group row">
+            <div class="col-md-3 center">
+                <input class="form-control" type="text">
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-md-3">
+                <input class="form-control" type="text">
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-md-3">
+                <input class="form-control" type="text">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">Tag</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Trophies</th>
+                    <th scope="col">Arena</th>
+                    <th scope="col">Clan Chest Crowns</th>
+                </tr>
+            </thead>
+            <tbody id="member-list">
+
+            </tbody>
+        </table>
+    </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $.getJSON('/api/clan/8UJRVGY9')
+        .done(function(data){
+            var memberArray = data.members;
+            $.each(memberArray, function(key, val){
+                $('#member-list').append('<tr>');
+                $('#member-list').append('<td>' + val.tag);
+                $('#member-list').append('<td>' + val.name);
+                $('#member-list').append('<td>' + val.trophies);
+                $('#member-list').append('<td>' + val.arena.arena);
+                $('#member-list').append('<td>' + val.clanChestCrowns);
+            });
+        });
+    });
+</script>
 </html>
