--- a/public/about.html
+++ b/public/about.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/media/favicon/icon.png">
 </head>
 <body>
-    this is the about page
+    <p>this is the about page</p>
+    <p><a href="https://github.com/anthonyrojas/ClashSite">GitHub Repo</a></p>    
 </body>
 </html>
