--- a/public/player.html
+++ b/public/player.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Clan</title>
+    <title>Player Info</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/media/favicon/icon.png">
     <!--bootstrap-->
@@ -14,7 +14,9 @@
     <!--google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
     <!--custom css-->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <!--custom scripts-->
+    <!--<script type="text/javascript" src="/scripts/playerScript.js"></script>-->
 </head>
 <body>
     <header>
@@ -23,15 +25,15 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img src="./media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top">
-                    The Normies
+                <img src="/media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top">
+                The Normies
             </a>                
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="/clan">Our Clan</a>
                     </li>
                     <li class="nav-item">
@@ -40,64 +42,38 @@
                 </ul>
             </div>
         </nav>
-        <img class="img-fluid" src="./media/header/banner.jpg" style="width:100%; height: auto;">
+        <img class="img-fluid" src="/media/header/banner.jpg" style="width:100%; height: auto;">
     </header>
     <main>
-    <div class="container-fluid">
-        <h3>Compare Members</h3>
-        <div class="form-group row">
-            <div class="col-md-3 center">
-                <input class="form-control" type="text">
-            </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-md-3">
-                <input class="form-control" type="text">
-            </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-md-3">
-                <input class="form-control" type="text">
-            </div>
-        </div>
-    </div>
     <div class="container">
-        <table class="table table-dark">
-            <thead>
-                <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Trophies</th>
-                    <th scope="col">Arena</th>
-                    <th scope="col">Clan Chest Crowns</th>
-                </tr>
-            </thead>
-            <tbody id="member-list">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <h3 class="card-header" id="player-name"></h3>
+                    <div class="card-block" id="player-info">
 
-            </tbody>
-        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     </main>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
     $(document).ready(function(){
-        $.getJSON('/api/clan/8UJRVGY9')
-        .done(function(data){
-            var memberArray = data.members;
-            $.each(memberArray, function(key, val){
-                $('#member-list').append('<tr>');
-                $('#member-list').append('<td><a href="/player/' + val.tag + '" class="memberClick" onclick="getTag(this);">' + val.name + '</a>');
-                $('#member-list').append('<td>' + val.trophies);
-                $('#member-list').append('<td>' + val.arena.arena);
-                $('#member-list').append('<td>' + val.clanChestCrowns);
-            });
+        console.time('cache');
+        $.getJSON('/api' + localStorage.getItem('playerTag')).done(function(data){
+            $('#player-name').append(data.name + '[tag: ' + data.tag + ']');
+            $('#player-info').append('<img src="' + data.clan.badge.image + '">');
+            $('#player-info').append('<p class="card-text">Trophies: ' + data.trophies);
+            $('#player-info').append('<p class="card-text">Arena Name: ' + data.arena.name);
+            $('#player-info').append('<p class="card-text">Arena: ' + data.arena.arena);
+            $('#player-info').append('<p class="card-text">Player Level: ' + data.stats.level);
+            $('#player-info').append('<p class="card-text">Wins: ' + data.games.wins);
+            $('#player-info').append('<p class="card-text">Losses: ' + data.games.losses);
         });
+        console.timeEnd('cache');
     });
-</script>
-<script>
-    function getTag(obj) {
-        localStorage.setItem('playerTag', obj.getAttribute("href"));
-        return true;
-    }
 </script>
 </html>
